Fix bug when wrapped in label and minor updates

--- a/selectric.css
+++ b/selectric.css
@@ -2,13 +2,14 @@
 	Selectric
 ======================================================================*/
 .selectricWrapper { position: relative; margin: 0 0 10px; width: 300px; }
+.selectricDisabled { filter: alpha(opacity=50); opacity: 0.5; }
 .selectricOpen { z-index: 9999; }
 .selectricHideSelect { position: relative; overflow: hidden; }
 .selectricHideSelect select { position: absolute; left: -100%; }
 .selectric { border: 1px solid #DDD; background: #F8F8F8; position: relative; border-radius: 2px; cursor: pointer; }
 .selectricOpen .selectric { border-color: #CCC; background: #F0F0F0; z-index: 9999; }
 .selectric .label { display: block; white-space: nowrap; overflow: hidden; margin: 0 30px 0 0; padding: 6px; font-size: 12px; line-height: 1.5; color: #444; }
-.selectric .button { position: absolute; right: 0; top: 0; line-height: 30px; height: 30px; width: 30px; color: #BBB; text-align: center; }
+.selectric .button { position: absolute; right: 0; top: 0; height: 30px; width: 30px; color: #BBB; text-align: center; font: normal 18px/30px sans-serif; }
 .hover .selectric { border-color: #CCC; }
 .hover .selectric .button { color: #888; }
 .selectricTempShow { position: absolute !important; visibility: hidden !important; display: block !important; }
